# SFlow-MCP-Server

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/mcp-server/: Dockerfile  app.py  client.py  requirements.txt  server.py
apps/mcp-server/middleware/: audit.py  ratelimit.py
apps/mcp-server/resources/: inventory.py
apps/mcp-server/schemas/: tool_contracts.json
apps/mcp-server/tools/: acknowledge_anomaly.py  anomaly_summary.py  compare_windows.py  device_neighbors.py  device_state.py  explain_hot_link.py  fabric_health.py  fabric_imbalance.py  find_path.py  intent_diff.py  link_history.py  link_utilization.py  protocol_mix.py  rdma_health.py  recent_anomalies.py  top_offenders.py  top_talkers.py
apps/telemetry-api/: Dockerfile  alembic.ini  main.py  otel.py  requirements.txt
apps/telemetry-api/auth/: audit.py  context.py
apps/telemetry-api/collectors/: gnmi_client.py  sflow_rt_client.py  test_sflow_rt.py  verity_client.py
apps/telemetry-api/db/: __init__.py  models.py
apps/telemetry-api/middleware/: auth.py
apps/telemetry-api/routers/: admin.py  anomalies.py  devices.py  fabric.py  flows.py  intent.py  interfaces.py  rdma.py  tool_audit.py  topology.py  traffic.py
docs/: FlowMind_PRGuide.docx  FlowMind_Pitch.docx  FlowMind_TechSpec.docx
shared/: logging.py
shared/schemas/: alerts.py  device_state.py  flow.py  interface.py
tests/: test_audit_guardrails.py  test_circuit_breaker.py  test_mcp_server.py  test_new_tools_forwarding.py  test_ratelimit.py  test_structured_logs.py  test_tool_contracts.py
(+66 files in other folders)
